feat: Adds just one simple HTLM code to check what's wrong with auto build

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 							</div>
 							<div class="top-post-details">
 								<ul class="tags">
-									<li><a href="#">Food Habit</a></li>
+									<li><a href="#">배포되는지 확인하기</a></li>
 								</ul>
 								<a href="image-post.html">
 									<h3>A Discount Toner Cartridge Is Better Than Ever.</h3>
