feat: [RSS Feed] - Successes trss feed data rendering using HTML Templating method

--- a/src/main/resources/templates/feed/index.html
+++ b/src/main/resources/templates/feed/index.html
@@ -691,48 +691,50 @@
         <h2><a href="category.html" target="_self">Camera</a></h2>
     </div>
     <!-- article_title -->
+    <div id="camera-list">
+        <script id="latest-news-list" type="text/template">
+            <div class="category_article_wrapper">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="top_article_img">
+                            <a href="single.html" target="_self">
+                                <img class="img-responsive" src="{img}" alt="feature-top">
+                            </a>
+                        </div>
+                        <!-- top_article_img -->
 
-    <div class="category_article_wrapper">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="top_article_img">
-                    <a href="single.html" target="_self">
-                        <img class="img-responsive" src="assets/img/cam_left1.jpg" alt="feature-top">
-                    </a>
+                    </div>
+                    <div class="col-md-7">
+                        <span class="tag orange">Camera</span>
+
+                        <div class="category_article_title">
+                            <h2><a href="single.html" target="_self">{title}</a></h2>
+                        </div>
+                        <!-- category_article_title -->
+
+                        <div class="article_date"><a href="#">{pubDate}</a>, by: <a href="#">{author}</a></div>
+                        <!----article_date------>
+                        <!-- category_article_wrapper -->
+
+                        <div class="category_article_content">
+                            {content}
+                        </div>
+                        <!-- category_article_content -->
+
+                        <div class="media_social">
+                            <span><a href="#"><i class="fa fa-share-alt"></i>424 </a> Shares</span>
+                            <span><i class="fa fa-comments-o"></i><a href="#">0</a> Comments</span>
+                        </div>
+                        <!-- media_social -->
+
+                    </div>
+                    <!-- col-md-7 -->
+
                 </div>
-                <!-- top_article_img -->
+                <!-- row -->
 
             </div>
-            <div class="col-md-7">
-                <span class="tag orange">Camera</span>
-
-                <div class="category_article_title">
-                    <h2><a href="single.html" target="_self">Yasaki camera launches new generic hi-speed </a></h2>
-                </div>
-                <!-- category_article_title -->
-
-                <div class="article_date"><a href="#">10Aug- 2015</a>, by: <a href="#">Eric joan</a></div>
-                <!----article_date------>
-                <!-- category_article_wrapper -->
-
-                <div class="category_article_content">
-                    Collaboratively administrate empowered markets via plug-and-play networks. Dynamically
-                    procrastinate.
-                </div>
-                <!-- category_article_content -->
-
-                <div class="media_social">
-                    <span><a href="#"><i class="fa fa-share-alt"></i>424 </a> Shares</span>
-                    <span><i class="fa fa-comments-o"></i><a href="#">4</a> Comments</span>
-                </div>
-                <!-- media_social -->
-
-            </div>
-            <!-- col-md-7 -->
-
-        </div>
-        <!-- row -->
-
+        </script>
     </div>
     <!-- category_article_wrapper -->
 
