feat: [Domain] - Creates Feed domain object that can save multiple RSS url

--- a/src/main/resources/templates/feed/index.html
+++ b/src/main/resources/templates/feed/index.html
@@ -51,7 +51,7 @@
         <div class="header-section">
             <!--rss button-->
             <div class="input-group mb-3">
-                <input type="text" class="form-control" id="rss-url" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input type="text" class="form-control" id="rss-url" placeholder="Please type RSS url" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" id="rss-url-register-button" type="button">Button</button>
                 </div>
