feat: [Domain] - Creates Rss domain class

--- a/src/main/resources/templates/feed/index.html
+++ b/src/main/resources/templates/feed/index.html
@@ -1539,6 +1539,7 @@
 <script src="assets/js/script.js"></script>
 <!--Custom Script-->
 <script src="js/feed/feed.js"></script>
+<script src="js/feed/TemporaryDrawer.js"></script>
 
 </body>
 </html>
