--- a/src/main/resources/templates/feed/index.html
+++ b/src/main/resources/templates/feed/index.html
@@ -25,6 +25,9 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
     <!-- Theme Style -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,6 +38,36 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar">
+<div class="bmd-layout-container bmd-drawer-f-r bmd-drawer-overlay">
+    <header class="bmd-layout-header">
+        <div class="navbar navbar-light bg-faded">
+            <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-p2">
+                <span class="sr-only">Toggle drawer</span>
+                <i class="material-icons">menu</i>
+            </button>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">Title</li>
+            </ul>
+        </div>
+    </header>
+    <div id="dw-p2" class="bmd-layout-drawer bg-faded">
+        <header>
+            <a class="navbar-brand">Title</a>
+        </header>
+        <ul class="list-group">
+            <a class="list-group-item">Link 1</a>
+            <a class="list-group-item">Link 2</a>
+            <a class="list-group-item">Link 3</a>
+        </ul>
+    </div>
+    <main class="bmd-layout-content">
+        <div class="container">
+            <!-- main content -->
+        <!--</div>-->
+    <!--</main>-->
+<!--</div>-->
+
+
 <div id="main-wrapper">
 <!-- Page Preloader -->
 <div id="preloader">
@@ -1521,6 +1554,10 @@
 <!-- .uc-mobile-menu -->
 
 </div>
+        </div>
+    </main>
+</div>
+
 <!-- #main-wrapper -->
 
 <!-- jquery Core-->
@@ -1539,7 +1576,9 @@
 <script src="assets/js/script.js"></script>
 <!--Custom Script-->
 <script src="js/feed/feed.js"></script>
-<script src="js/feed/TemporaryDrawer.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+<script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
 </body>
 </html>
